Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.3.0-beta1
-
Mac OSX 10.8.5, Qt Creator 3.3 beta snapshot based on Qt5.4
-
8c6e561a64feb3226b0bc42ef5165c9ba52c0630
Description
Steps to reproduce:
- select a Qt version on the Build & Run settings page
- check the QLineEdit for the Version Name [see attached pic]
Attachments
Issue Links
- replaces
-
QTCREATORBUG-13222 variable chooser icon is over the text on MacOS
-
- Closed
-